--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,45 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.dashboard {
+  text-align: center;
+  margin: 20px;
+}
+
+.employee-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.employee-card {
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin: 10px;
+  width: 200px;
+  text-align: left;
+  cursor: pointer;
+  position: relative;
+}
+
+.employee-card h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.employee-card input[type="checkbox"] {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
+button {
+  margin-right: 10px;
+  padding: 5px 10px;
+}
+
+button[disabled] {
+  background-color: gray;
+  cursor: not-allowed;
+}
